--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <meta name="author" content="Seiri" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1a1a1a" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://html-online-game.github.io/assets/css/style.css"
+    />
     <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      href="https://html-online-game.github.io/favicon.ico"
+    />
     <!-- Google adsense -->
     <script
       async
@@ -31,7 +37,10 @@
       gtag("js", new Date());
       gtag("config", "G-PF5LNZJYLL");
     </script>
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script
+      type="text/javascript"
+      src="https://html-online-game.github.io/assets/js/script.js"
+    ></script>
     <title>Online Game Site</title>
   </head>
   <body>
@@ -39,8 +48,8 @@
       <h1>Online Game Site</h1>
     </header>
     <nav>
-      <a href="/">Home</a>
-      <a href="/policy.html">Policy</a>
+      <a href="https://html-online-game.github.io/">Home</a>
+      <a href="https://html-online-game.github.io/policy.html">Policy</a>
     </nav>
     <main class="game-container">
       <h2>All Games</h2>
