--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <meta name="author" content="Seiri" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1a1a1a" />
-    <link
-      rel="stylesheet"
-      href="https://html-online-game.github.io/assets/css/style.css"
-    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link
       rel="apple-touch-icon"
@@ -37,10 +34,7 @@
       gtag("js", new Date());
       gtag("config", "G-PF5LNZJYLL");
     </script>
-    <script
-      type="text/javascript"
-      src="https://html-online-game.github.io/assets/js/script.js"
-    ></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <title>Online Game Site</title>
   </head>
   <body>
@@ -53,6 +47,20 @@
     </nav>
     <main class="game-container">
       <h2>All Games</h2>
+      <!-- html-online-game-list-ad -->
+      <div class="ad-container">
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-4988552421895566"
+          data-ad-slot="2343374539"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
       <div class="game-list"></div>
     </main>
     <footer>
