--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
         </script>
       </div>
       <div class="game-list"></div>
+      <div class="ad-container">
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-4988552421895566"
+          data-ad-slot="2343374539"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
     </main>
     <footer>
       <p>&copy; 2025 Online Game Site. All rights reserved.</p>
