--- a/policy.html
+++ b/policy.html
@@ -4,74 +4,340 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Online Game Site" />
-    <meta name="keywords" content="game, online, site" />
+    <meta name="description" content="Privacy Policy - Online Game Site" />
+    <meta
+      name="keywords"
+      content="privacy policy, terms, conditions, online games"
+    />
     <meta name="author" content="Seiri" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1a1a1a" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      href="https://html-online-game.github.io/favicon.ico"
+    />
+    <!-- Google adsense -->
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
       crossorigin="anonymous"
     ></script>
-    <title>Online Game Site</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PF5LNZJYLL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-PF5LNZJYLL");
+    </script>
+    <title>Privacy Policy - Online Game Site</title>
   </head>
-  <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-PF5LNZJYLL"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-PF5LNZJYLL");
-  </script>
-  <!-- Google adsense -->
   <body>
     <header>
-      <h1>Online Game Site</h1>
-    </header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/policy.html">Policy</a>
-    </nav>
-    <main class="policy-container">
-      <div>
-        <h2 class="main-title">Privacy Policy </h1>
-        <p>
-          If you require any more information or have any questions about our
-          privacy policy, please feel free to contact us.
-        </p>
-        <h2 class="sub-title">Collecting and Using Your Personal Data</h2>
-        <h3 class="sub-sub-title">Personal Data</h3>
-        <p>
-          This website will not collect your personal information,The user's
-          personal information is not used in this site <br />and not provide
-          user information to third parties.
-        </p>
-        <p>
-          This website uses Google Analytics as an analysis tool, and Google
-          Analytics has the possibility of automatically acquiring user
-          information.<br />Please refer to the privacy policy of Google
-          Analytics for information acquired, the purpose of use, and the
-          provision to the third party.
-        </p>
-        <h3 class="sub-sub-title">Tracking Technologies and Cookies</h3>
-        <p>
-          We're not use Cookies and similar tracking technologies on the
-          website.
-        </p>
+      <div class="container">
+        <div class="header-content">
+          <h1>🎮 Online Game Site</h1>
+          <button class="menu-toggle" id="menuToggle">
+            <span class="hamburger">☰</span>
+          </button>
+          <nav id="mobileNav">
+            <a href="https://html-online-game.github.io/">🏠 Home</a>
+            <a
+              href="https://html-online-game.github.io/policy.html"
+              class="active"
+              >📋 Policy</a
+            >
+          </nav>
+        </div>
       </div>
-    </main>
+    </header>
+
+    <div class="container">
+      <!-- Top Ad -->
+      <div class="ad-container">
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-4988552421895566"
+          data-ad-slot="2343374539"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
+      <main class="policy-container">
+        <div class="policy-header">
+          <h2>🛡️ Privacy Policy</h2>
+          <p class="last-updated">Last updated: September 28, 2025</p>
+        </div>
+
+        <div class="policy-section">
+          <h3>1. Information We Collect</h3>
+          <p>
+            We are committed to protecting your privacy. This policy explains
+            how we collect, use, and protect your information when you visit our
+            online game site.
+          </p>
+
+          <h4>1.1 Information You Provide</h4>
+          <ul>
+            <li>Account information (if you create an account)</li>
+            <li>Contact information when you reach out to us</li>
+            <li>Game preferences and settings</li>
+            <li>Feedback and comments you provide</li>
+          </ul>
+
+          <h4>1.2 Information We Collect Automatically</h4>
+          <ul>
+            <li>Device information and browser type</li>
+            <li>IP address and location data</li>
+            <li>Game usage statistics and performance data</li>
+            <li>Cookies and similar tracking technologies</li>
+          </ul>
+        </div>
+
+        <div class="policy-section">
+          <h3>2. How We Use Your Information</h3>
+          <p>We use the collected information for the following purposes:</p>
+          <ul>
+            <li>Provide and improve our gaming services</li>
+            <li>Personalize your gaming experience</li>
+            <li>Communicate with you about updates and features</li>
+            <li>Analyze usage patterns to enhance performance</li>
+            <li>Ensure security and prevent fraud</li>
+            <li>Comply with legal obligations</li>
+          </ul>
+        </div>
+
+        <div class="highlight-box">
+          <h4>🍪 Cookie Policy</h4>
+          <p>
+            We use cookies to enhance your browsing experience, serve
+            personalized ads, and analyze our traffic. You can control cookie
+            preferences through your browser settings. Essential cookies are
+            necessary for the site to function properly.
+          </p>
+        </div>
+
+        <div class="policy-section">
+          <h3>3. Information Sharing</h3>
+          <p>
+            We do not sell your personal information. We may share information
+            in the following circumstances:
+          </p>
+          <ul>
+            <li>
+              <strong>Service Providers:</strong> Third-party companies that
+              help us operate our services
+            </li>
+            <li>
+              <strong>Analytics:</strong> Google Analytics for understanding
+              site usage
+            </li>
+            <li>
+              <strong>Advertising:</strong> Google AdSense for displaying
+              relevant ads
+            </li>
+            <li>
+              <strong>Legal Requirements:</strong> When required by law or to
+              protect our rights
+            </li>
+          </ul>
+        </div>
+
+        <div class="policy-section">
+          <h3>4. Third-Party Services</h3>
+          <p>Our website integrates with several third-party services:</p>
+
+          <div class="highlight-box">
+            <h4>📊 Google Analytics</h4>
+            <p>
+              We use Google Analytics to understand how visitors interact with
+              our site. Google Analytics collects information anonymously and
+              reports website trends without identifying individual visitors.
+            </p>
+          </div>
+
+          <div class="highlight-box">
+            <h4>📢 Google AdSense</h4>
+            <p>
+              We display ads through Google AdSense. Google may use cookies to
+              serve ads based on your visits to this site and other sites on the
+              Internet. You can opt out of personalized advertising by visiting
+              Google's Ads Settings.
+            </p>
+          </div>
+        </div>
+
+        <!-- Middle Ad -->
+        <div class="ad-container">
+          <ins
+            class="adsbygoogle"
+            style="display: block"
+            data-ad-client="ca-pub-4988552421895566"
+            data-ad-slot="9336691129"
+            data-ad-format="auto"
+            data-full-width-responsive="true"
+          ></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
+
+        <div class="policy-section">
+          <h3>5. Data Security</h3>
+          <p>
+            We implement appropriate security measures to protect your
+            information:
+          </p>
+          <ul>
+            <li>SSL encryption for data transmission</li>
+            <li>Regular security audits and updates</li>
+            <li>Limited access to personal information</li>
+            <li>Secure hosting infrastructure</li>
+          </ul>
+        </div>
+
+        <div class="policy-section">
+          <h3>6. Your Rights and Choices</h3>
+          <p>You have several rights regarding your personal information:</p>
+          <ul>
+            <li>
+              <strong>Access:</strong> Request information about data we have
+              about you
+            </li>
+            <li>
+              <strong>Correction:</strong> Request correction of inaccurate
+              information
+            </li>
+            <li>
+              <strong>Deletion:</strong> Request deletion of your personal
+              information
+            </li>
+            <li>
+              <strong>Opt-out:</strong> Unsubscribe from marketing
+              communications
+            </li>
+            <li>
+              <strong>Data Portability:</strong> Request a copy of your data in
+              a portable format
+            </li>
+          </ul>
+        </div>
+
+        <div class="policy-section">
+          <h3>7. Children's Privacy</h3>
+          <p>
+            Our service is not intended for children under 13 years of age. We
+            do not knowingly collect personal information from children under
+            13. If you are a parent or guardian and believe your child has
+            provided us with personal information, please contact us.
+          </p>
+        </div>
+
+        <div class="policy-section">
+          <h3>8. Changes to This Policy</h3>
+          <p>
+            We may update this privacy policy from time to time. We will notify
+            you of any changes by:
+          </p>
+          <ul>
+            <li>Posting the new policy on this page</li>
+            <li>Updating the "Last updated" date</li>
+            <li>Sending you an email notification (if applicable)</li>
+          </ul>
+          <p>
+            Your continued use of our service after changes constitutes
+            acceptance of the updated policy.
+          </p>
+        </div>
+
+        <div class="contact-info">
+          <h4>📞 Contact Us</h4>
+          <p>
+            If you have any questions about this Privacy Policy or our data
+            practices, please contact us:
+          </p>
+          <ul>
+            <li>
+              <strong>Website:</strong> https://html-online-game.github.io
+            </li>
+          </ul>
+        </div>
+      </main>
+    </div>
+
     <footer>
-      <p>&copy; 2025 Online Game Site. All rights reserved.</p>
+      <div class="container">
+        <p>&copy; 2025 Online Game Site. All rights reserved.</p>
+      </div>
     </footer>
+
+    <script>
+      // Initialize ads
+      (adsbygoogle = window.adsbygoogle || []).push({});
+
+      // Mobile menu functionality
+      document.addEventListener("DOMContentLoaded", function () {
+        const menuToggle = document.getElementById("menuToggle");
+        const mobileNav = document.getElementById("mobileNav");
+
+        if (menuToggle && mobileNav) {
+          menuToggle.addEventListener("click", function () {
+            mobileNav.classList.toggle("mobile-open");
+
+            const hamburger = this.querySelector(".hamburger");
+            if (mobileNav.classList.contains("mobile-open")) {
+              hamburger.textContent = "✕";
+            } else {
+              hamburger.textContent = "☰";
+            }
+          });
+
+          // Close menu when clicking outside
+          document.addEventListener("click", function (event) {
+            if (
+              !menuToggle.contains(event.target) &&
+              !mobileNav.contains(event.target)
+            ) {
+              mobileNav.classList.remove("mobile-open");
+              menuToggle.querySelector(".hamburger").textContent = "☰";
+            }
+          });
+
+          // Close menu when clicking on nav links
+          const navLinks = mobileNav.querySelectorAll("a");
+          navLinks.forEach((link) => {
+            link.addEventListener("click", function () {
+              mobileNav.classList.remove("mobile-open");
+              menuToggle.querySelector(".hamburger").textContent = "☰";
+            });
+          });
+        }
+      });
+
+      // Smooth scroll for internal links
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute("href"));
+          if (target) {
+            target.scrollIntoView({
+              behavior: "smooth",
+            });
+          }
+        });
+      });
+    </script>
   </body>
 </html>
