--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Seiri" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1a1a1a" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" href="./favicon.ico" />
-    <link rel="apple-touch-icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="https://html-online-game.github.io/assets/css/style.css" />
+    <link rel="icon" href="https://html-online-game.github.io/favicon.ico" />
+    <link rel="apple-touch-icon" href="https://html-online-game.github.io/favicon.ico" />
     <title>Online Game Site - 404 page not found</title>
   </head>
   <!-- Google tag (gtag.js) -->
